# ship_reports

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build.yml
app/: config.py  main.py
plans/: ocpn-add-LoadGPXFileAsLayer-api.md  opencpn-architecture.md  shipobs-plugin-plan.md  shipobs-server-plan.md
plugin/: .clang-format  CMakeLists.txt  Dockerfile  INFO.md  TODO.md  build-docker.sh  compile_commands.json  package.sh  run-tests-docker.sh
plugin/include/opencpn/: ocpn_plugin.h
plugin/po/: POTFILES.in  de_DE.po  fr_FR.po
plugin/src/: gpx_builder.cpp  gpx_builder.h  obs_parser.cpp  obs_parser.h  observation.h  render_overlay.cpp  render_overlay.h  request_dialog.cpp  request_dialog.h  server_client.cpp  server_client.h  settings_dialog.cpp  settings_dialog.h  ship_reports_plugin_dialog.cpp  ship_reports_plugin_dialog.h  shipobs_pi.cpp  shipobs_pi.h  station_info_frame.cpp  station_info_frame.h  station_popup.cpp  station_popup.h  url_builder.h
plugin/tests/: CMakeLists.txt  test_gpx.cpp  test_obs_parser.cpp  test_runner.h  test_url_builder.cpp
plugin/tools/: gen_info_html.py
